Bug 428083 - Window Rules cannot setting position X/Y value to negative number
Summary: Window Rules cannot setting position X/Y value to negative number
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinrules (other bugs)
Version First Reported In: 5.19.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-10-22 04:51 UTC by Chen Meng
Modified: 2020-10-27 02:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chen Meng 2020-10-22 04:51:30 UTC
STEPS TO REPRODUCE
1. Move a Window out of screen
2. Add window rule,try "Detect Window Properties", then you can see position entry with negative number, chose this.
3. Finally, you will see one of the value from negative number become ZERO.


KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1


ADDITIONAL INFORMATION

Set a window be out of screen sounds little nuts. 
But GUI Emacs cannot be just fit the screen. 
So I feeling when GUI Emacs window size is bigger than screen is better than the  small one.

sorry for my funny English.
Comment 1 Bug Janitor Service 2020-10-22 18:43:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/375
Comment 2 Ismael Asensio 2020-10-26 20:19:26 UTC
Git commit 3d80665c0a3bab3991f5fbdc070037b484464a98 by Ismael Asensio.
Committed on 26/10/2020 at 20:15.
Pushed by iasensio into branch 'master'.

[kwinrules] Allow negative numbers in position

This was limited by the range of the edition spinbox, not by the
rules mechanism which already allowed it.

M  +8    -7    kcmkwin/kwinrules/package/contents/ui/ValueEditor.qml
M  +4    -2    kcmkwin/kwinrules/ruleitem.cpp

https://invent.kde.org/plasma/kwin/commit/3d80665c0a3bab3991f5fbdc070037b484464a98
Comment 3 Nate Graham 2020-10-26 20:42:56 UTC
Thanks!

Do you think this is safe to backport to 5.20?
Comment 4 Ismael Asensio 2020-10-26 21:08:13 UTC
(In reply to Nate Graham from comment #3)
> Thanks!
> 
> Do you think this is safe to backport to 5.20?

Yes, it's a minor change.
Comment 5 Chen Meng 2020-10-27 00:34:30 UTC
Thank you everyone!
I'm feeling grateful!
Comment 6 Nate Graham 2020-10-27 02:09:05 UTC
Git commit 9ae4021ef4d4f83f9e615c3419ad2b9ad3b6036c by Nate Graham, on behalf of Ismael Asensio.
Committed on 27/10/2020 at 02:09.
Pushed by ngraham into branch 'Plasma/5.20'.

[kwinrules] Allow negative numbers in position

This was limited by the range of the edition spinbox, not by the
rules mechanism which already allowed it.


(cherry picked from commit 3d80665c0a3bab3991f5fbdc070037b484464a98)

M  +8    -7    kcmkwin/kwinrules/package/contents/ui/ValueEditor.qml
M  +4    -2    kcmkwin/kwinrules/ruleitem.cpp

https://invent.kde.org/plasma/kwin/commit/9ae4021ef4d4f83f9e615c3419ad2b9ad3b6036c