[kwinrules] Allow negative numbers in position

This was limited by the range of the edition spinbox, not by the
rules mechanism which already allowed it.

BUG: 428083